style and corect index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Agricultural_machinery</title>
+    <link rel="stylesheet" href="css/agro_tehnika.css">
 </head>
+
 <body>
-    
+    <header>
+        <div>
+            <ul class="header-log">
+                <li class="logo_img"><a href="#"><img width="106" height="67" src="./img/heder-futer-img/logo.png" alt="logo"></a></li>
+                <li><a href="#">Ангары и<br>сельхозтехника<br>от производителя</a></li>
+                <li><a href="#">Качество и приемлемая цена</a></li>
+                <li><a href="#"><img width="22" height="22" src="./img/heder-futer-img/logos_whatsapp-icon.png" alt="logo-whatsapp">WhatsApp</a><br>
+                    <a href="#"><img width="22" height="18" src="./img/heder-futer-img/logo_mesage.png" alt="logo-mesage">mail@agro-teh.su</a>
+                </li>
+                <li><a href=”tel:+7-928-212-22-19>8-928-212-22-19</a><br>
+                    <a href=”tel:+7-928-778-92-80>8-928-778-92-80</a>
+                </li>
+                <li><button>Заказать звонок</button></li>
+            </ul>
+        </div>
+        <div>
+            <ul class="header-nav">
+                <li><a href="#">АНГАРЫ</a></li>
+                <li><a href="#">СЕЛЬХОЗТЕХНИКА</a></li>
+                <li><a href="#">ЗАПЧАСТИ</a></li>
+                <li><a href="#">УСЛУГИ</a></li>
+                <li><a href="#">О КОМПАНИИ</a></li>
+                <li><a href="#">О КОНТАКТЫ</a></li>
+                <li><a href="#">О НАШИ РАБОТЫ</a></li>
+            </ul>
+        </div>
+    </header>
+    <div>
+
+    </div>
+    <futer>
+
+    </futer>
 </body>
+
 </html>
