--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <header>
         <div>
             <ul class="header-log">
-                <li class="logo_img"><a href="#"><img width="106" height="67" src="./img/heder-futer-img/logo.png" alt="logo"></a></li>
-                <li><a href="#">Ангары и<br>сельхозтехника<br>от производителя</a></li>
+                <li><a href="#"><img width="106" height="67" src="./img/heder-futer-img/logo.png" alt="logo">Ангары
+                        и<br>сельхозтехника<br>от производителя</a></li>
                 <li><a href="#">Качество и приемлемая цена</a></li>
-                <li><a href="#"><img width="22" height="22" src="./img/heder-futer-img/logos_whatsapp-icon.png" alt="logo-whatsapp">WhatsApp</a><br>
-                    <a href="#"><img width="22" height="18" src="./img/heder-futer-img/logo_mesage.png" alt="logo-mesage">mail@agro-teh.su</a>
+                <li><a href="#"><img width="22" height="22" src="./img/heder-futer-img/logos_whatsapp-icon.png"
+                            alt="logo-whatsapp">WhatsApp</a><br>
+                    <a href="#"><img width="22" height="18" src="./img/heder-futer-img/logo_mesage.png"
+                            alt="logo-mesage">mail@agro-teh.su</a>
                 </li>
                 <li><a href=”tel:+7-928-212-22-19>8-928-212-22-19</a><br>
                     <a href=”tel:+7-928-778-92-80>8-928-778-92-80</a>
@@ -25,7 +27,7 @@
                 <li><button>Заказать звонок</button></li>
             </ul>
         </div>
-        <div>
+        <nav>
             <ul class="header-nav">
                 <li><a href="#">АНГАРЫ</a></li>
                 <li><a href="#">СЕЛЬХОЗТЕХНИКА</a></li>
@@ -35,13 +37,330 @@
                 <li><a href="#">О КОНТАКТЫ</a></li>
                 <li><a href="#">О НАШИ РАБОТЫ</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
-    <div>
+    <main>
+        <div class="contener-img">
+            <div class="fon-img">
+                <h1>ИДЕАЛЬНЫЕ АНГАРЫ <br>ЗАВОДСКОГО ИЗГОТОВЛЕНИЯ</h1>
+                <div>
+                    (Ангары, Бороны, Опрыскиватели, Сельхозтехника, Запчасти)
+                </div>
+                <div>
+                    <ul>
+                        <li>напрямую от производителя</li>
+                        <li>абсолютно любых размеров</li>
+                    </ul>
+                </div>
+                <div>
+                    получить консультацию:
+                </div>
+                <p>Ваш телефон*</p>
+                <div>
+                    <div>+7 ( ___ ) ___ - __ - __</div>
+                    <button>Отправить<svg width="17.8" height="17" viewBox="0 0 44 44" fill="none">
+                            <g filter="url(#filter0_d_45_26)">
+                                <path
+                                    d="M13 17.6321L17.5145 19.6312L27.98 11.2713L19.7718 20.7216V25.0833L22.8499 21.6303L27.98 23.4477L30.8529 8L13 17.6321Z"
+                                    fill="white" />
+                            </g>
+                        </svg></button>
+                    <button><a href=”tel:+7-928-212-22-19>8-928-212-22-19</a></button>
+                </div>
+                <div>
 
-    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contener">
+            <h2>ЧТО СТРОИМ</h2>
+            <div>
+                <ul>
+                    <li><a href="#">Ангары бескаркасные</a></li>
+                    <li><a href="#">Каркасные ангары</a></li>
+                    <li><a href="#">Ангары тентовые</a></li>
+                    <li><a href="#">Ремонт и реконструкция ангаров</a></li>
+                    <li><a href="#">Изготовление металлоконструкций</a></li>
+                </ul>
+            </div>
+            <section>
+                <div>
+                    <img width="645" height="638" src="./img/home-img/angar-svinarnik-2.jpg" alt="angar-svinarnik">
+                </div>
+                <div>
+                    <h3>Ангары бескаркасные</h3>
+                    <ul>
+                        <li>
+                            <ul>
+                                <li><a href="#">Бескаркасные ангары-свинарники</a></li>
+                                <li><a href="#">Бескаркасные зернохранилища</a></li>
+                                <li><a href="#">Бескаркасные склады, гаражи</a></li>
+                                <li><a href="#">Производственные бескаркасные сооружения</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <ul>
+                                <li><a href="#">Бескаркасные навесы</a></li>
+                                <li><a href="#">Бескаркасные овощехранилища</a></li>
+                                <li><a href="#">Ангары для животноводства</a></li>
+                                <li><a href="#">Авиационные ангары</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <div>
+                        <div><img width="41" height="42" src="./img/home-img/height.svg">От 12 до 28 метров</div>
+                        <div><img width="42" height="42" src="./img/home-img/termometr.svg">Утепление пенополиуретаном
+                        </div>
+                        <div><img width="41" height="42" src="./img/home-img/fan.svg">Монтаж системы вентиляции</div>
+                    </div>
+                    <p>Цена рассчитывается индивидуально по согласованному техническому заданию</p>
+                    <div>
+                        <h4>Получить расчет:</h4>
+                        <p>Ваш телефон*</p>
+                        <div>
+                            <div>+7 ( ___ ) ___ - __ - __</div>
+                            <button>Отправить<svg width="17.8" height="17" viewBox="0 0 44 44" fill="none">
+                                    <g filter="url(#filter0_d_45_26)">
+                                        <path
+                                            d="M13 17.6321L17.5145 19.6312L27.98 11.2713L19.7718 20.7216V25.0833L22.8499 21.6303L27.98 23.4477L30.8529 8L13 17.6321Z"
+                                            fill="white" />
+                                    </g>
+                                </svg></button>
+                            <button><a href=”tel:+7-928-212-22-19>8-928-212-22-19</a></button>
+                        </div>
+                    </div>
+                    <p>Преимущества бескаркасных ангаров:</p>
+                    <ul>
+                        <li>Быстрая окупаемость проекта</li>
+                        <li>Скорость строительства (20 дней)</li>
+                        <li>Герметичность и прочность конструкции</li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <div class="contener">
+            <div>
+                <h2>ЧТО ПРОИЗВОДИМ</h2>
+                <div>
+                    <ul>
+                        <li><a href="#">Бороны</a></li>
+                        <li><a href="#">Опрыскиватели</a></li>
+                        <li><a href="#">Разбрасыватели удобрений</a></li>
+                        <li><a href="#">Прочая сельхозтехника</a></li>
+                        <li><a href="#">Запчасти и комплектующие</a></li>
+                    </ul>
+                </div>
+                <section>
+                    <div>
+                        <img width="645" height="404" src="./img/home-img/borona-1.jpg" alt="borona">
+                    </div>
+                    <div>
+                        <h3>Бороны</h3>
+                        <p>Цена рассчитывается индивидуально по согласованному техническому заданию</p>
+                        <div>
+                            <h4>Получить расчет:</h4>
+                            <p>Ваш телефон*</p>
+                            <div>
+                                <div>+7 ( ___ ) ___ - __ - __</div>
+                                <button>Отправить<svg width="17.8" height="17" viewBox="0 0 44 44" fill="none">
+                                        <g filter="url(#filter0_d_45_26)">
+                                            <path
+                                                d="M13 17.6321L17.5145 19.6312L27.98 11.2713L19.7718 20.7216V25.0833L22.8499 21.6303L27.98 23.4477L30.8529 8L13 17.6321Z"
+                                                fill="white" />
+                                        </g>
+                                    </svg></button>
+                                <button><a href=”tel:+7-928-212-22-19>8-928-212-22-19</a></button>
+                            </div>
+                        </div>
+                        <p>Применение:</p>
+                        <ul>
+                            <li>обработки почвы до стадии появления всходов и после;</li>
+                            <li>работ по сохранению нормальной влажности почвы;</li>
+                            <li>для выравнивания верхнего почвенного слоя;</li>
+                            <li>для борьбы с сорняками на их ранней (ниточковой) фазе.</li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <div>
+            <div class="contener">
+                <h2>Не нашли, что искали?</h2>
+                <p>Отправьте заявку — подберем необходимое оборудование или комплектующие, рассчитаем стоимость
+                    постройки
+                    или производства!</p>
+                <p>Ваш телефон*</p>
+                <div>
+                    <div class="border_telephone">+7 ( ___ ) ___ - __ - __</div>
+                    <button>Заказать расчет</button>
+                </div>
+            </div>
+        </div>
+        <div class="contener">
+            <div>
+                <h2>О НАС</h2>
+
+                <div>
+                    <div>
+                        <p>ООО “АГРО-ТЕХ” было создано с целью удовлетворения потребностей отечественных
+                            сельхозпроизводителей
+                            в надежной и практичной технике. В настоящее время это успешно развивающаяся компания с
+                            внушительным
+                            опытом работы в производственной и строительной сфере.
+                        </p>
+                        <p>ООО “АГРО-ТЕХ” уже на протяжении длительного времени является одной из наиболее заметных
+                            компаний
+                            изготовителей на рынке сельскохозяйственной техники. Основная сфера нашей деятельности это –
+                            ангары
+                            и сельхозтехника от производителя.
+                        </p>
+                        <div>
+                            <div>
+                                <img width="69" height="69" src="./img/home-img/arhievement.png" alt="logo arhievement">
+                                <div>
+                                    <h3>Качество и приемлемая цена</h3>
+                                    <p>предприятие создает столь же качественные, недорогие и адаптированные к
+                                        российским реалиям отечественные аналоги сельскохозяйственной техники.</p>
+                                </div>
+                            </div>
+                            <div>
+                                <img width="69" height="69" src="./img/home-img/file.png" alt="logo file">
+                                <div>
+                                    <h3>СЕРТИФИКАТЫ</h3>
+                                    <p>все предлагаемые машины сертифицированы, во многих из них используются
+                                        собственные запатентованные разработки.</p>
+                                </div>
+                            </div>
+                            <div>
+                                <img width="69" height="69" src="./img/home-img/cooperation.png" alt="logo cooperation">
+                                <div>
+                                    <h3>Партнерство</h3>
+                                    <p>компания имеет десятки фирм-партнеров как на территории России, так и в странах
+                                        ближнего и дальнего зарубежья.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <img width="517" height="408" src="./img/home-img/director.jpg" alt="photo director">
+                        <div>
+                            <img width="247" height="278" src="./img/home-img/korovnik-1.jpg" alt="photo korovnik">
+                            <img width="247" height="276" src="./img/home-img/angar-remont-1.jpg"
+                                alt="photo remont angar">
+                        </div>
+                    </div>
+                </div>
+
+                <div></div>
+            </div>
+        </div>
+        <div class="contener">
+            <div>
+                <img width="312" height="300" src="./img/home-img/avia-1.jpg" alt="photo avia angar">
+                <img width="312" height="300" src="./img/home-img/angar-garaj-1.jpg" alt="photo angar garaj">
+                <img width="312" height="300" src="./img/home-img/angar-proizvodstv.jpg" alt="photo angar proizvodstvo">
+                <img width="312" height="300" src="./img/home-img/angar-korovniki-1.jpg" alt="photo angar korovnik">
+            </div>
+        </div>
+        <div>
+            <h2>НАШИ ПРЕИМУЩЕСТВА</h2>
+            <div>
+                <div>
+                    <img width="100" height="100" src="./img/home-img/guarantee.png" alt="guarantee">
+                    <div>
+                        <h3>Гарантия</h3>
+                        <p>На каждый наш объект мы даем гарантию на несущие конструкции</p>
+                    </div>
+                </div>
+                <div>
+                    <img width="100" height="100" src="./img/home-img/worker.png" alt="worker">
+                    <div>
+                        <h3>Опытные бригады</h3>
+                        <p>Мы не набираем "непонятные" бригады из интернета. Наши люди более 5 лет работают с нами</p>
+                    </div>
+                </div>
+                <div>
+                    <img width="100" height="100" src="./img/home-img/cogwheel-setting.png" alt="cogwheel-setting">
+                    <div>
+                        <h3>СРО</h3>
+                        <p>Мы саморегулируемая организация и у нас есть соответствующий допуск. Гарантия надёжности</p>
+                    </div>
+                </div>
+                <div>
+                    <img width="100" height="100" src="./img/home-img/wallet.png" alt="wallet">
+                    <div>
+                        <h3>Без скрытых платежей</h3>
+                        <p>В отличие от конкурентов, мы гарантируем, что цена в договоре неизменна при любых
+                            обстоятельствах</p>
+                    </div>
+                </div>
+                <div>
+                    <img width="100" height="100" src="./img/home-img/engineering.png" alt="engineering">
+                    <div>
+                        <h3>Своя база и техника</h3>
+                        <p>Мы обеспечиваем низкие цены за счёт того что у нас своя производственная база со всем
+                            необходимым оборудованием и спец.техникой</p>
+                    </div>
+                </div>
+                <div>
+                    <img width="100" height="100" src="./img/home-img/mechanics.png" alt="mechanics">
+                    <div>
+                        <h3>Под ключ</h3>
+                        <p>Выполняем полный комплекс работ - от проектирования до сдачи в эксплуатацию, помогаем с
+                            благоустройством, оформляем документы</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <futer>
-
+        <div>
+            <div>
+                <div>
+                    <img src="./img/heder-futer-img/logo.png" alt="">
+                    <a href="">Ангары и сельхозтехника от производителя</a>
+                </div>
+                <a href=”tel:+7-928-212-22-19>8-928-212-22-19</a><br>
+                <a href=”tel:+7-928-778-92-80>8-928-778-92-80</a>
+                <div>
+                    <a href="#"> <img width="22" height="22" src="./img/heder-futer-img/logos_whatsapp-icon.png"
+                            alt="logo-whatsapp">WhatsApp</a>
+                    <a href="mailto:#"> <img width="22" height="22" src="./img/heder-futer-img/logo_mesage.png"
+                            alt="logo-mesage">mail@agro-teh.su</a>
+                </div>
+                <p>347939, Россия, Ростовская область, Таганрог, ул. Пархоменко, 19</p>
+            </div>
+            <div>
+                <a href="#">АНГАРЫ</a>
+                <a href="#">СЕЛЬХОЗТЕХНИКА</a>
+                <a href="#">ЗАПЧАСТИ</a>
+                <a href="#">УСЛУГИ</a>
+                <a href="#">О КОМПАНИИ</a>
+                <a href="#">КОНТАКТЫ</a>
+            </div>
+            <div>
+                НАШИ РАБОТЫ
+                <a href="#">Ангары бескаркасные</a>
+                <a href="#">Тентовые ангары</a>
+                <a href="#">Навесы и тока</a>
+                <a href="#">Авиационные ангары</a>
+                <a href="#">Каркасные ангары </a>
+                <a href="#">Бороны</a>
+                <a href="#">Разбрасыватели удобрений</a>
+                <a href="#">Опрыскиватели </a>
+                <a href="#">Прочая сельхозтехника </a>
+                <a href="#">Запчасти и комплектующие </a>
+                <a href="#">Услуги</a>
+            </div>
+            <div>
+                <h4>Остались вопросы? ОСТАВЬТЕ ТЕЛЕФОН-ПЕРЕЗВОНИМ:</h4>
+                <p>Ваш телефон*</p>
+                <div class="border_telephone">+7 ( ___ ) ___ - __ - __</div>
+                <button>Отправить</button>
+                <button>8 928 212 22 19</button>
+            </div>
+        </div>
+        <div></div>
     </futer>
 </body>
 
