--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="contener">
             <h2>ЧТО СТРОИМ</h2>
             <div>
-                <ul>
+                <ul class="main_nav">
                     <li><a href="#">Ангары бескаркасные</a></li>
                     <li><a href="#">Каркасные ангары</a></li>
                     <li><a href="#">Ангары тентовые</a></li>
@@ -89,7 +89,7 @@
                 </div>
                 <div>
                     <h3>Ангары бескаркасные</h3>
-                    <ul>
+                    <ul class="list_two_colomn">
                         <li>
                             <ul>
                                 <li><a href="#">Бескаркасные ангары-свинарники</a></li>
@@ -142,7 +142,7 @@
             <div>
                 <h2>ЧТО ПРОИЗВОДИМ</h2>
                 <div>
-                    <ul>
+                    <ul class="main_nav">
                         <li><a href="#">Бороны</a></li>
                         <li><a href="#">Опрыскиватели</a></li>
                         <li><a href="#">Разбрасыватели удобрений</a></li>
@@ -264,50 +264,56 @@
         </div>
         <div>
             <h2>НАШИ ПРЕИМУЩЕСТВА</h2>
-            <div>
+            <div class="advantages">
                 <div>
-                    <img width="100" height="100" src="./img/home-img/guarantee.png" alt="guarantee">
                     <div>
-                        <h3>Гарантия</h3>
-                        <p>На каждый наш объект мы даем гарантию на несущие конструкции</p>
+                        <img width="100" height="100" src="./img/home-img/guarantee.png" alt="guarantee">
+                        <div>
+                            <h3>Гарантия</h3>
+                            <p>На каждый наш объект мы даем гарантию на несущие конструкции</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img width="100" height="100" src="./img/home-img/worker.png" alt="worker">
+                        <div>
+                            <h3>Опытные бригады</h3>
+                            <p>Мы не набираем "непонятные" бригады из интернета. Наши люди более 5 лет работают с нами
+                            </p>
+                        </div>
+                    </div>
+                    <div>
+                        <img width="100" height="100" src="./img/home-img/cogwheel-setting.png" alt="cogwheel-setting">
+                        <div>
+                            <h3>СРО</h3>
+                            <p>Мы саморегулируемая организация и у нас есть соответствующий допуск. Гарантия надёжности
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div>
-                    <img width="100" height="100" src="./img/home-img/worker.png" alt="worker">
                     <div>
-                        <h3>Опытные бригады</h3>
-                        <p>Мы не набираем "непонятные" бригады из интернета. Наши люди более 5 лет работают с нами</p>
+                        <img width="100" height="100" src="./img/home-img/wallet.png" alt="wallet">
+                        <div>
+                            <h3>Без скрытых платежей</h3>
+                            <p>В отличие от конкурентов, мы гарантируем, что цена в договоре неизменна при любых
+                                обстоятельствах</p>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <img width="100" height="100" src="./img/home-img/cogwheel-setting.png" alt="cogwheel-setting">
                     <div>
-                        <h3>СРО</h3>
-                        <p>Мы саморегулируемая организация и у нас есть соответствующий допуск. Гарантия надёжности</p>
+                        <img width="100" height="100" src="./img/home-img/engineering.png" alt="engineering">
+                        <div>
+                            <h3>Своя база и техника</h3>
+                            <p>Мы обеспечиваем низкие цены за счёт того что у нас своя производственная база со всем
+                                необходимым оборудованием и спец.техникой</p>
+                        </div>
                     </div>
-                </div>
-                <div>
-                    <img width="100" height="100" src="./img/home-img/wallet.png" alt="wallet">
                     <div>
-                        <h3>Без скрытых платежей</h3>
-                        <p>В отличие от конкурентов, мы гарантируем, что цена в договоре неизменна при любых
-                            обстоятельствах</p>
-                    </div>
-                </div>
-                <div>
-                    <img width="100" height="100" src="./img/home-img/engineering.png" alt="engineering">
-                    <div>
-                        <h3>Своя база и техника</h3>
-                        <p>Мы обеспечиваем низкие цены за счёт того что у нас своя производственная база со всем
-                            необходимым оборудованием и спец.техникой</p>
-                    </div>
-                </div>
-                <div>
-                    <img width="100" height="100" src="./img/home-img/mechanics.png" alt="mechanics">
-                    <div>
-                        <h3>Под ключ</h3>
-                        <p>Выполняем полный комплекс работ - от проектирования до сдачи в эксплуатацию, помогаем с
-                            благоустройством, оформляем документы</p>
+                        <img width="100" height="100" src="./img/home-img/mechanics.png" alt="mechanics">
+                        <div>
+                            <h3>Под ключ</h3>
+                            <p>Выполняем полный комплекс работ - от проектирования до сдачи в эксплуатацию, помогаем с
+                                благоустройством, оформляем документы</p>
+                        </div>
                     </div>
                 </div>
             </div>
