--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
                     <rect y="15.3496" width="33" height="3.83721" fill="#E10B20" />
                 </svg>
             </button>
-            <div class="mobile_header_log">
-                <div class="header_log_head">
-                    <div><a href="#"><img width="106" height="67" src="./img/heder-futer-img/logo.png" alt="logo"></div>
-                    <div>Ангары
-                        и<br>сельхозтехника<br>от производителя</a>
-                    </div>
+            <div class="header_log_head">
+                <div><a href="#"><img width="106" height="67" src="./img/heder-futer-img/logo.png" alt="logo"></div>
+                <div>Ангары
+                    и<br>сельхозтехника<br>от производителя</a>
                 </div>
-                <div><a href="#"> </a></div>
+            </div>
+            <div class="mobile_header_log">
                 <div><a href="#">Качество и приемлемая цена</a></div>
+                <div class="phone_header"><a href=”tel:+7-928-212-22-19>8-928-212-22-19</a><br>
+                    <a href=”tel:+7-928-778-92-80>8-928-778-92-80</a>
+                </div>
                 <div><a href="#"><img width="22" height="22" src="./img/heder-futer-img/logos_whatsapp-icon.png"
                             alt="logo_whatsapp">WhatsApp</a><br>
                     <a href="#"><img width="22" height="18" src="./img/heder-futer-img/logo_mesage.png"
                             alt="logo_mesage">mail@agro-teh.su</a>
                 </div>
-                <div class="phone_header"><a href=”tel:+7-928-212-22-19>8-928-212-22-19</a><br>
-                    <a href=”tel:+7-928-778-92-80>8-928-778-92-80</a>
-                </div>
+                
                 <div><button>Заказать звонок</button></div>
             </div>
 
@@ -50,7 +50,6 @@
                         и<br>сельхозтехника<br>от производителя</a>
                     </div>
                 </div>
-                <div><a href="#"> </a></div>
                 <div><a href="#">Качество и приемлемая цена</a></div>
                 <div><a href="#"><img width="22" height="22" src="./img/heder-futer-img/logos_whatsapp-icon.png"
                             alt="logo_whatsapp">WhatsApp</a><br>
@@ -620,7 +619,7 @@
             </div>
         </div>
         <div class="contener">
-            <div>
+            <div class="photo_desktop">
                 <img width="312" height="300" src="./img/home-img/avia-1.jpg" alt="photo avia angar">
                 <img width="312" height="300" src="./img/home-img/angar-garaj-1.jpg" alt="photo angar garaj">
                 <img width="312" height="300" src="./img/home-img/angar-proizvodstv.jpg" alt="photo angar proizvodstvo">
