--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <rect y="15.3496" width="33" height="3.83721" fill="#E10B20" />
                 </svg>
             </button>
-            <div class="header_log_head">
+            <div class="mobile_header_log_head">
                 <div><a href="#"><img width="106" height="67" src="./img/heder-futer-img/logo.png" alt="logo"></div>
                 <div>Ангары
                     и<br>сельхозтехника<br>от производителя</a>
